website/versioned_docs/version-2.2.0/commands/Test-MtPimAlertsExists.mdx
---
sidebar_class_name: hidden
description: "Checks if PIM alerts exists"
id: Test-MtPimAlertsExists
title: Test-MtPimAlertsExists
hide_title: false
hide_table_of_contents: false
custom_edit_url: https://github.com/maester365/maester/blob/main/powershell/public/maester/entra/Test-MtPimAlertsExists.ps1
---

## SYNOPSIS

Checks if PIM alerts exists

## SYNTAX

```powershell
Test-MtPimAlertsExists [-AlertId] <String> [[-FilteredAccessLevel] <String[]>]
 [[-FilteredBreakGlass] <Object[]>] [-ProgressAction <ActionPreference>] [<CommonParameters>]
```

## DESCRIPTION

GET `/beta/identityGovernance/roleManagementAlerts/alerts/\{unifiedRoleManagementAlertId\}`

## EXAMPLES

### EXAMPLE 1

```powershell
Test-MtPimAlertsExists -FilteredAccessLevel "ControlPlane" -AlertId "RolesAssignedOutsidePimAlert"
```

## PARAMETERS

### -AlertId

ID for the alert to test.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -FilteredAccessLevel

Filter based on Enterprise Access Model Tiering.
Can be 'ControlPlane' and/or 'ManagementPlane'.

```yaml
Type: String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -FilteredBreakGlass

Specify break glass accounts to exclude.
Defaults to automatic detection based on conditional access policy exclusions.

```yaml
Type: Object[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 3
Default value: (Get-MtUser -UserType EmergencyAccess)
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -ProgressAction

Determines how PowerShell responds to progress updates generated by a script, cmdlet, or provider, such as the progress bars generated by Write-Progress.

```yaml
Type: ActionPreference
Parameter Sets: (All)
Aliases: proga

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

### System.Object

## NOTES

## RELATED LINKS

[https://maester.dev/docs/commands/Test-MtPimAlertsExists](https://maester.dev/docs/commands/Test-MtPimAlertsExists)
